# momole

./: LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  moemoe.keystore  neta_v5.0.0_2017-10-15_085515_moemoe.apk.REMOVED.git-id  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Screenplay.xml  ScreenplaySample.xml  ShareSDK.xml  TakeXml.xml  otakuhouse_public_server.pem
app/src/main/assets/map_yoru/: map_yoru.xml
app/src/main/cpp/: kira.cpp
app/src/main/res/anim/: cycle.xml  list_anim_in.xml  list_anim_out.xml  main_list_in.xml  main_list_out.xml  pop_scale_in.xml  pop_scale_out.xml
app/src/main/res/color/: date_picker_selector.xml  date_picker_year_selector.xml  txt_creator.xml  txt_cyan_normal.xml  txt_cyan_white.xml  txt_dark_gray.xml  txt_gray_929292_main.xml  txt_gray_929292_red.xml  txt_gray_blue.xml  txt_gray_cyan_selected.xml  txt_gray_d7d7d7_main.xml  txt_gray_main.xml  txt_gray_red.xml  txt_green_red.xml  txt_main_bottom_bar.xml  txt_pink_blue.xml  txt_white_can_disable.xml  txt_white_cyan.xml  txt_white_gray.xml  txt_white_green.xml  txt_white_main.xml  txt_white_red.xml
app/src/main/res/drawable/: bg_3_border.xml  bg_btn_pic.xml  bg_calendar_item.xml  bg_calendar_item_today.xml  bg_circle_blue.xml  (+420 more)
app/src/main/res/drawable-v21/: btn_alert_dialog.xml  list_selector_gray.xml
app/src/main/res/drawable-xhdpi/: bg_rect_white_border_cyan_pressed.xml  btn_map_qiu.xml  shape_doc_from_orange_normal.xml  shape_doc_from_orange_pressed.xml  shape_rect_label_normal.xml
(+2309 files in other folders)
